# Autonomous-Finance-Copilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
docs/: ARCHITECTURE.md  BACKLOG.md
infra/bicep/: main.bicep
infra/github/: deployment-plan.yml
samples/datasets/: finance_transactions.csv  vendor_master.csv
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  anomaly_detection.py  base.py  budget.py  contracts.py  executive_summary.py  forecast.py  instructions.py  orchestrator.py  variance_analysis.py  vendor_analysis.py
src/api/v1/: router.py
src/api/v1/endpoints/: __init__.py  agents.py  analysis.py  anomaly.py  budget.py  forecast.py  reports.py  vendor.py
src/core/: deps.py  exceptions.py  logging.py  middleware.py
src/data/medallion/: __init__.py  bronze.py  gold.py  silver.py
src/evaluation/: __init__.py  scorer.py
src/services/: fabric_service.py  foundry_agent_service.py  foundry_client.py  search_service.py
tests/integration/: test_analysis_endpoint.py
tests/unit/: test_evaluation.py  test_foundry_agent_service.py  test_health.py
